TURKISH/listings/ch02-guessing-game-tutorial/listing-02-04/output.txt
$ cargo run
   Compiling libc v0.2.112
   Compiling cfg-if v1.0.0
   Compiling ppv-lite86 v0.2.16
   Compiling getrandom v0.2.4
   Compiling rand_core v0.6.3
   Compiling rand_chacha v0.3.1
   Compiling rand v0.8.4
   Compiling tahmin_oyunu v0.1.0 (/home/rusdili/projeler/tahmin_oyunu)
error[E0308]: mismatched types
   --> src/main.rs:343:22
    |
343 |     match tahmin.cmp(&gizli_say覺) {
    |                      ^^^^^^^^^^^ expected struct `String`, found integer
    |
    = note: expected reference `&String`
               found reference `&{integer}`

error[E0283]: type annotations needed for `{integer}`
   --> src/main.rs:328:41
    |
328 |     let gizli_say覺 = rand::thread_rng().gen_range(1..101);
    |         ----------                      ^^^^^^^^^ cannot infer type for type `{integer}`
    |         |
    |         consider giving `gizli_say覺` a type
    |
    = note: multiple `impl`s satisfying `{integer}: SampleUniform` found in the `rand` crate:
            - impl SampleUniform for i128;
            - impl SampleUniform for i16;
            - impl SampleUniform for i32;
            - impl SampleUniform for i64;
            and 8 more
note: required by a bound in `gen_range`
   --> /home/rusdili/.cargo/registry/src/github.com-1ecc6299db9ec823/rand-0.8.4/src/rng.rs:131:12
    |
131 |         T: SampleUniform,
    |            ^^^^^^^^^^^^^ required by this bound in `gen_range`
help: consider specifying the type arguments in the function call
    |
328 |     let gizli_say覺 = rand::thread_rng().gen_range::<T, R>(1..101);
    |                                                  ++++++++

Some errors have detailed explanations: E0283, E0308.
For more information about an error, try `rustc --explain E0283`.
error: could not compile `tahmin_oyunu` due to 2 previous errors
